--- a/helper/src/main/resources/views/rolemenus/pdd_role.html
+++ b/helper/src/main/resources/views/rolemenus/pdd_role.html
@@ -1,9 +1,9 @@
 <!--pdd_admin-->
-<li ${active== "shop-manager" ? "class='active'" : ""}><a
+<li ${active== "shop-list" ? "class='active'" : ""}><a
 	href="${ctxPath }/shop/list"> <i class="icon-dashboard"></i>
 		<span class="menu-text">商铺列表</span>
 </a></li>
-<li ${active== "cust-agent-store" ? "class='active'" : ""}>
+<li ${active== "order-list" ? "class='active'" : ""}>
 	<a href="${ctxPath}/order/list">
 		<i class="icon-dashboard"></i>
 		订单列表
