--- a/helper/src/main/resources/views/index.html
+++ b/helper/src/main/resources/views/index.html
@@ -1,139 +1,234 @@
 <!DOCTYPE html>
-<html lang="zh">
-<head>
-<meta charset="utf-8" />
-<title>${tenant.shortName!'屋瓴'}地产云系统</title>
-<meta name="keywords" content="${tenant.shortName!'屋瓴'}地产云系统" />
-<meta name="description" content="${tenant.shortName!'屋瓴'}地产云系统" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<html>
 
-<% include("/include/_basic_styles.html"){} %> <%
-include("/include/_basic_scripts.html"){} %>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>屋瓴网站后台管理系统</title>
+    <meta name="keyword" content="">
+    <meta name="description" content="">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="renderer" content="webkit">
+    <meta name="Author" content="zifan">
+    <meta name="copyright" content="上海屋瓴版权所有。All Rights Reserved">
+    <link name="favicon" rel="icon" href="favicon.ico" >
+    <link href="${ctxPath}/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="${ctxPath}/static/font-awesome/css/font-awesome.css" rel="stylesheet">
+    <link href="${ctxPath}/static/css/plugins/toastr/toastr.min.css" rel="stylesheet">
+    <link href="${ctxPath}/static/js/plugins/gritter/jquery.gritter.css" rel="stylesheet">
+
+    <link href="${ctxPath}/static/css/animate.css" rel="stylesheet">
+    <link href="${ctxPath}/static/css/style.css" rel="stylesheet">
 </head>
 
-<body>
-	<div class="main-container" id="main-container">
-		<script type="text/javascript">
-			try {
-				ace.settings.check('main-container', 'fixed')
-			} catch (e) {
-			}
-		</script>
-		<div class="main-container-inner">
+<body class="fixed-sidebar">
+    <div id="wrapper">
+        <!----左侧导航开始----->
+        <nav class="navbar-default navbar-static-side animated fadeInLeft" role="navigation" id="leftnav">
+        <% include("/include/_sidebar.html",{active:"index"}){} %>        
+        </nav>
+        <!----左侧导航结束----->
 
-			<% include("/include/_sidebar.html",{active:"index"}){} %>
+        <!---右侧内容区开始---->
+        <div id="page-wrapper" class="gray-bg">
+            <!---顶部状态栏 star-->
+            <div class="row ">
+              <nav class="navbar navbar-fixed-top" role="navigation" id="topnav"></nav>
+            </div>
+            <!---顶部状态栏 end-->
 
-			<div class="main-content">
-				<% include("/include/_navbar.html"){} %>
-				<div class="breadcrumbs" id="breadcrumbs">
-					<script type="text/javascript">
-						try {
-							ace.settings.check('breadcrumbs', 'fixed')
-						} catch (e) {
-						}
-					</script>
-
-					<ul class="breadcrumb">
-						<li><i class="icon-home home-icon"></i> <a href="#">首页</a></li>
-						<li class="active">控制台</li>
-					</ul>
-					<!-- .breadcrumb -->
-				</div>
-
-				<div class="page-content">
-					<div class="page-header">
-						<h1>
-							控制台 <small> <i class="icon-double-angle-right"></i> 查看
-							</small>
-						</h1>
-					</div>
-					<!-- /.page-header -->
-
-					<div class="row">
-						<div class="col-xs-12">
-							<!-- PAGE CONTENT BEGINS -->
-							<h4>系统优化日志</h4>
-							<hr>
-							<h1>V1.2.1.20160414</h1>
-							<ul>
-								<li>1.佣金专员增加了经服的相关信息</li>
-								<li>admin/运营专员增加了数据显示权限设置</li>
-								<li>admin/运营专员增加pos机绑定、解绑功能，项目助理去掉pos机绑定解绑功能</li>
-								<li>可以定制经纪人APP注册的角色</li>
-								<li>bug修复</li>
-							</ul>
-							<hr>
-							<h1>V1.2.0.20160308</h1>
-							<ul>
-								<li>项目上线流程优化</li>
-								<li>项目信息录入由项目经理全部完成</li>
-								<li>原案场经理账号部分功能移到项目助理</li>
-								<li>房源信息录入优化</li>
-								<li>项目管理功能优化</li>
-								<li>经服功能扩展</li>
-								<li>新增经服经理</li>
-								<li>Bug修复</li>
-							</ul>
-							<h1>V1.1.6.20151203</h1>
-							<ul>
-								<li>邀请注册短信的个性化定制</li>
-								<li>项目经理增加了客户列表</li>
-								<li>经纪人注册时间具体到时分</li>
-								<li>修复大量bug</li>
-							</ul>
-							<h1>V1.1.5.20151127</h1>
-							<ul>
-								<li>可查看会员经纪人下线</li>
-								<li>修复大量bug</li>
-							</ul>
-							<h1>V1.1.3.20151116</h1>
-							<ul>
-								<li>报备客户审核优化为拒绝才需补全号码</li>
-								<li>新增一个物业类型：工业园区</li>
-								<li>修复大量bug</li>
-							</ul>
-							<h1>V1.1.2.20151105</h1>
-							<ul>
-								<li>优化合同编号生成规则</li>
-								<li>修复大量bug</li>
-							</ul>
-							<h1>V1.1.0.20151022</h1>
-							<ul>
-								<li>楼盘佣金规则改成上下线，支持审核通过立即上线</li>
-								<li>楼盘由合作期调整为上下线</li>
-								<li>案场客户审核时需输入客户手机号码中间4位来匹配</li>
-								<li>楼盘地址标注新增地址搜索功能</li>
-								<li>登录，重置密码增加验证码</li>
-								<li>bug修复</li>
-							</ul>
-							<!-- PAGE CONTENT ENDS -->
-						</div>
-						<!-- /.col -->
-					</div>
-					<!-- /.row -->
-
-				</div>
-				<!-- /.page-content -->
-
-			</div>
-			<!-- /.main-content -->
-
-		</div>
-		<!-- /.main-container-inner -->
-
-		<a href="#" id="btn-scroll-up"
-			class="btn-scroll-up btn btn-sm btn-inverse"> <i
-			class="icon-double-angle-up icon-only bigger-110"></i>
-		</a>
-	</div>
-	<!-- /.main-container -->
-
-	<!-- page specific plugin scripts -->
-
-	<!-- inline scripts related to this page -->
+            <!--------当前位置----->
 
 
+            <!-----内容区域---->
+            <div class=" wrapper wrapper-content ">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <table>
+                            <tr>
+                                <td>阿狸马马</td>
+                            </tr><tr>
+                                <td>阿狸马马</td>
+                            </tr><tr>
+                                <td>阿狸马马</td>
+                            </tr>
+                        </table>
+                        <div class="text-center m-t-lg">
+                            <h1>
+                                Welcome in INSPINIA Static SeedProject<br>
+                                <p class="textp">
+                                    <span class="p1">************</span><span class="p2">123</span>
+                                </p>
+                                <style>
+                                    .textp{}
+                                    .textp span{display: inline-block}
+                                    .textp .p1 { 
+                                        font-size: 28px;
+                                        font-family:Arial;
+                                        line-height: 10px;
+                                        vertical-align: text-bottom;
+                                    }
+                                    .textp .p2 { font-size: 22px;}
+                                </style>
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal5">TAB弹出框</button>
+                            </h1>
+                            <small>
+                                It is an application skeleton for a typical web app. You can use it to quickly bootstrap your webapp projects and dev environment for these projects.
+                            </small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-----内容结束----->
 
+            <!----版权信息----->
+            <div class="footer">
+                <div class="pull-right">
+                    10GB of <strong>250GB</strong> Free.
+                </div>
+                <div>
+                    <strong>Copyright</strong> Example Company &copy; 2014-2015
+                </div>
+            </div>
+
+        </div>
+        <!---右侧内容区结束----->
+
+
+        <!---右侧下方小聊天框---->
+        <div class="small-chat-box fadeInRight animated">
+
+            <div class="heading" draggable="true">
+                <small class="chat-date pull-right">
+                    02.19.2015
+                </small>
+                Small chat
+            </div>
+
+            <div class="content">
+
+                <div class="left">
+                    <div class="author-name">
+                        Monica Jackson <small class="chat-date">
+                        10:02 am
+                    </small>
+                    </div>
+                    <div class="chat-message active">
+                        Lorem Ipsum is simply dummy text input.
+                    </div>
+
+                </div>
+                <div class="right">
+                    <div class="author-name">
+                        Mick Smith
+                        <small class="chat-date">
+                            11:24 am
+                        </small>
+                    </div>
+                    <div class="chat-message">
+                        Lorem Ipsum is simpl.
+                    </div>
+                </div>
+                <div class="left">
+                    <div class="author-name">
+                        Alice Novak
+                        <small class="chat-date">
+                            08:45 pm
+                        </small>
+                    </div>
+                    <div class="chat-message active">
+                        Check this stock char.
+                    </div>
+                </div>
+                <div class="right">
+                    <div class="author-name">
+                        Anna Lamson
+                        <small class="chat-date">
+                            11:24 am
+                        </small>
+                    </div>
+                    <div class="chat-message">
+                        The standard chunk of Lorem Ipsum
+                    </div>
+                </div>
+                <div class="left">
+                    <div class="author-name">
+                        Mick Lane
+                        <small class="chat-date">
+                            08:45 pm
+                        </small>
+                    </div>
+                    <div class="chat-message active">
+                        I belive that. Lorem Ipsum is simply dummy text.
+                    </div>
+                </div>
+            </div>
+            <div class="form-chat">
+                <div class="input-group input-group-sm"><input type="text" class="form-control"> <span class="input-group-btn"> <button
+                        class="btn btn-primary" type="button">Send
+                </button> </span></div>
+            </div>
+
+        </div>
+        <div id="small-chat">
+
+            <span class="badge badge-warning pull-right">5</span>
+            <a class="open-small-chat">
+                <i class="fa fa-comments"></i>
+
+            </a>
+        </div>
+    </div>
+    
+    
+    <div class="modal tabs-modal fade" id="myModal5" tabindex="-1" role="dialog"  aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <ul class="nav nav-tabs">
+                        <li class="active"><a data-toggle="tab" href="#tab-1"> 全部</a></li>
+                        <li class=""><a data-toggle="tab" href="#tab-2">一级下线 ( 0 )</a></li>
+                        <li class=""><a data-toggle="tab" href="#tab-2">一级下线 ( 2 )</a></li>
+                    </ul>
+                </div>
+                <div class="modal-body">
+                    <div class="tabs-container">
+                        
+                        <div class="tab-content">
+                            <div id="tab-1" class="tab-pane active">
+                                <div class="panel-body">
+                                    <ul class="list-unstyled">
+                                        <li>姓名:陈小林   电话:13598821365   等级:一级一上线</li>
+                                    </ul>
+
+                                </div>
+                            </div>
+                            <div id="tab-2" class="tab-pane">
+                                <div class="panel-body">
+                                    <strong>Donec quam felis</strong>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+            </div>
+        </div>
+        
+       </div>
+     </div>
+
+        <!-- Mainly scripts -->
+    <script src="${ctxPath}/static/js/jquery-2.1.1.js"></script>
+    <script src="${ctxPath}/static/js/bootstrap.min.js"></script>
+    <script src="${ctxPath}/static/js/wuling.js"></script>
+    <script src="${ctxPath}/static/js/plugins/pace/pace.min.js"></script>
+    <script src="${ctxPath}/static/js/plugins/metisMenu/jquery.metisMenu.js"></script>
+    <script src="${ctxPath}/static/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+    <script src="${ctxPath}/static/js/plugins/loading/jquery.loading.js"></script>
+<script>
+    //$('body').loading('show')
+    //$('body').loading('hide')
+</script>
 </body>
 </html>
-
