--- a/helper/src/main/resources/views/register.html
+++ b/helper/src/main/resources/views/register.html
@@ -29,7 +29,7 @@
         <!--------当前位置----->
         <div class="row  border-bottom white-bg page-heading">
             <div class="col-sm-4">
-                <h2>经纪公司</h2>
+                <h2>注册</h2>
             </div>
         </div>
 
@@ -96,8 +96,8 @@
 <!-- 全局 scripts -->
 <script src="${ctxPath}/static/js/jquery-2.1.1.js"></script>
 <script src="${ctxPath}/static/js/bootstrap.js"></script>
-<script src="${ctxPath}/static/js/wuling.js"></script>
-<script src="${ctxPath}/static/js/plugins/pace/pace.min.js"></script>
+<!-- <script src="${ctxPath}/static/js/wuling.js"></script>
+ --><script src="${ctxPath}/static/js/plugins/pace/pace.min.js"></script>
 <script src="${ctxPath}/static/js/plugins/validate/jquery.validate.min.js"></script>
 
 <script src="${ctxPath}/static/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
@@ -129,7 +129,7 @@
     			},
     			"password":{
     				required:true,
-    				minlength:8,
+    				minlength:6,
     				maxlength:20
     			}
     			
