--- a/helper/src/main/resources/views/index.html
+++ b/helper/src/main/resources/views/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>屋瓴网站后台管理系统</title>
+    <title>助手管理系统</title>
     <meta name="keyword" content="">
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="renderer" content="webkit">
     <meta name="Author" content="zifan">
-    <meta name="copyright" content="上海屋瓴版权所有。All Rights Reserved">
+    <meta name="copyright" content="All Rights Reserved">
     <link name="favicon" rel="icon" href="favicon.ico" >
     <link href="${ctxPath}/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="${ctxPath}/static/font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -46,15 +46,12 @@
                     <div class="col-lg-12">
                         <table>
                             <tr>
-                                <td>阿狸马马</td>
-                            </tr><tr>
-                                <td>阿狸马马</td>
-                            </tr><tr>
-                                <td>阿狸马马</td>
+                                <td>帮助快速处理订单信息</td>
                             </tr>
                         </table>
                         <div class="text-center m-t-lg">
-                            <h1>
+                         <img src="${ctxPath}/static/images/pddKeySecret.png">
+                         <!--    <h1>
                                 Welcome in INSPINIA Static SeedProject<br>
                                 <p class="textp">
                                     <span class="p1">************</span><span class="p2">123</span>
@@ -74,7 +71,7 @@
                             </h1>
                             <small>
                                 It is an application skeleton for a typical web app. You can use it to quickly bootstrap your webapp projects and dev environment for these projects.
-                            </small>
+                            </small> -->
                         </div>
                     </div>
                 </div>
