--- a/helper/src/main/resources/views/login.html
+++ b/helper/src/main/resources/views/login.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="renderer" content="webkit">
-    <title>屋瓴网站后台管理系统</title>
+    <title>助手管理系统</title>
     <meta name="keyword" content="">
     <meta name="description" content="">
     <meta name="Author" content="zifan">
-    <meta name="copyright" content="上海屋瓴版权所有。All Rights Reserved">
+    <meta name="copyright" content="All Rights Reserved">
     <link type="text/css" href="${ctxPath}/static/css/bootstrap.min.css" rel="stylesheet">
     <link type="text/css" href="${ctxPath}/static/font-awesome/css/font-awesome.css" rel="stylesheet">
     <link type="text/css" href="${ctxPath}/static/css/style.css" rel="stylesheet">
@@ -21,29 +21,29 @@
     <div class="container">
         <form class="form-signin" method="post" action="${ctxPath}/login/verify">
             <div class="form-signin-heading text-center">
-                <img src="images/login-logo.png" alt=""/>
-                <h1 class="sign-title"><span>地产云</span> 电商系统</h1>
+              <!--   <img src="images/login-logo.png" alt=""/> -->
+                <h1 class="sign-title"><span>助手</span>系统</h1>
             </div>
             
             <div class="login-wrap">
                 <div class="login-error login-error-hide" id="login-error"></div>
-                <label>用户名称 <i class="fa fa-question-circle text-warning" id="login-tooltip" data-toggle="tooltip" data-placement="top" data-html="true" title="仅支持分销专员使用手机号登录，分<br>销经理及管理员请使用账号登录" style="font-size: 17px"></i></label>
+                <label>用户名称 <i class="fa fa-question-circle text-warning" id="login-tooltip" data-toggle="tooltip" data-placement="top" data-html="true" style="font-size: 17px"></i></label>
                 <input type="text" class="form-control m-b" name="username" placeholder="用户名称" id="username" onBlur="showRestore(this);">
                 <input type="password" class="form-control m-b" name="password" id="password" placeholder="登录密码" onBlur="showRestore(this);">
                 <div class="registration clearfix">
                     <div class="pull-left">
-                        <input type="checkbox" value="remember-me"> 记住密码
+                        <input type="checkbox" checked name="remember" value="remember"> 记住密码
                     </div>
-                    <div class="pull-right text-right">
+                 <!--    <div class="pull-right text-right">
                         <a href="find-password.html"> 忘记密码?</a>
-                    </div>
+                    </div> -->
                 </div>
                 <button class="btn btn-lg btn-login btn-block" type="submit" id="send" onclick="loginform()"><i class="fa fa-check"></i> 登录</button>
-                <div class="text-center p-t-md" style="color: #999">账号请联系运营专员开通</div>
+                <div class="text-center p-t-md" style="color: #999"> <a href="${ctxPath}/register"> 注册</a></div>
             </div>
         </form>
     </div>
-    <div class="login-copy">© 2015 屋瓴 All Rights Reserved  沪ICP备15019222号-2</div>
+    <div class="login-copy"></div>
  <script src="/static/js/jquery-2.1.1.js"></script>
 <script src="/static/js/bootstrap.min.js"></script>
 <script>
