--- a/helper/src/main/resources/views/shop/add.html
+++ b/helper/src/main/resources/views/shop/add.html
@@ -4,14 +4,14 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>屋瓴网站后台管理系统</title>
+<title>助手管理系统</title>
 <meta name="keyword" content="">
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="renderer" content="webkit">
 <meta name="Author" content="zifan">
-<meta name="copyright" content="上海屋瓴版权所有。All Rights Reserved">
+<meta name="copyright" content="All Rights Reserved">
 <link href="${ctxPath}/static/css/bootstrap.min.css" rel="stylesheet">
 <link href="${ctxPath}/static/font-awesome/css/font-awesome.css"
 	rel="stylesheet">
@@ -70,10 +70,10 @@
 			<!--------当前位置----->
 			<div class="row  border-bottom white-bg page-heading">
 				<div class="col-sm-4">
-					<h2>门店新增</h2>
+					<h2>门店${shop!!=null?'编辑':'新增'}</h2>
 					<ol class="breadcrumb">
 						<li><a href="${ctxPath}/">管理首页</a></li>
-						<li class="active">门店新增</li>
+						<li class="active">门店${shop!!=null?'编辑':'新增'}</li>
 					</ol>
 				</div>
 			</div>
@@ -83,12 +83,12 @@
 				<div class="ibox float-e-margins ">
 					<div class="ibox-content p-t-slg">
 						<form name="entity" id="input_form" class="form-horizontal">
-							<input type="hidden" id="id" name="id" value="" required>
+							<input type="hidden" id="id" name="id" value="${shop.id!}">
 							<div class="form-group">
 								<label class="col-sm-2 control-label">门店名称 <span
 									class="text-danger">*</span></label>
 								<div class="col-sm-10">
-									<input type="text" id="name" name="name" value=""
+									<input type="text" id="name" name="name" value="${shop.name!}"
 										placeholder="请输入门店名称" class="form-control" required>
 								</div>
 							</div>
@@ -97,7 +97,7 @@
 								<label class="col-sm-2 control-label"> 接入码 <span
 									class="text-danger">*</span></label>
 								<div class="col-sm-10">
-									<input type="text" id="key" name="key" value=""
+									<input type="text" id="key" name="key" value="${shop.key!}"
 										placeholder="请输入接入码" class="form-control" required>
 								</div>
 							</div>
@@ -105,7 +105,7 @@
 								<label class="col-sm-2 control-label">接口密码 <span
 									class="text-danger">*</span></label>
 								<div class="col-sm-10">
-									<input type="text" id="secret" name="secret" value=""
+									<input type="text" id="secret" name="secret" value="${shop.secret!}"
 										placeholder="请输入接口密码" class="form-control" required>
 								</div>
 							</div>
@@ -113,7 +113,7 @@
 								<label class="col-sm-2 control-label"> 手机号 <span
 									class="text-danger">*</span></label>
 								<div class="col-sm-10">
-									<input type="text" id="phone" name="phone" value=""
+									<input type="text" id="phone" name="phone" value="${shop.phone!}"
 										placeholder="请输入门店联系人" class="form-control" required>
 								</div>
 							</div>
@@ -180,7 +180,7 @@
 					"secret" : {
 						required : true,
 						minlength : 11,
-						maxlength : 30
+						maxlength : 60
 					},
 					phone : {
 						required : true,
@@ -204,7 +204,7 @@
 					"secret" : {
 						required : "请输入手机号",
 						minlength : "最小长度11",
-						maxlength : "最大长度30"
+						maxlength : "最大长度60"
 					},
 					phone : {
 						required : "请输入手机号",
@@ -215,7 +215,6 @@
 
 				},
 				submitHandler : function(form) {
-					alert("HEKE");
 					$.ajax({
 						url : '${ctxPath}/shop/saveOrUpdate',
 						type : "post",
