--- a/helper/src/main/resources/views/order/list.html
+++ b/helper/src/main/resources/views/order/list.html
@@ -92,7 +92,9 @@
                             <option value="1" ${status!0==1?'selected' : ''}>未发货</option>
                         </select>
                     </div>
-
+                   <div class="col-md-3 form-group  m-t-xs">
+                            <input type="text" class="input-sm form-control" name="filterPhones" value="${filterPhones!}" placeholder="请输入过滤手机号185********,186*********">
+                      </div>
                     <div class="form-group col-md-4 m-t-xs " id="data_5">
                         <div class="input-daterange input-group" >
                             <span class="input-group-btn"><i class="fa fa-search"></i> <button class="btn btn-primary btn-sm m-b-none"><i class="fa fa-search"></i> 搜索</button></span>
