--- a/helper/src/main/resources/views/goods/list.html
+++ b/helper/src/main/resources/views/goods/list.html
@@ -26,7 +26,7 @@
 <div id="wrapper">
     <!----左侧导航开始----->
     <nav class="navbar-default navbar-static-side" role="navigation">
-       <% include("/include/_sidebar.html",{active:"order-list"}){} %>
+       <% include("/include/_sidebar.html",{active:"goods-list"}){} %>
     </nav>
     <!----左侧导航结束----->
 
@@ -62,10 +62,10 @@
         <!--------当前位置----->
         <div class="row  border-bottom white-bg page-heading">
             <div class="col-sm-4">
-                <h2>订单列表</h2>
+                <h2>商品列表</h2>
                 <ol class="breadcrumb">
                     <li><a href="${ctxPath}/">管理首页</a></li>
-                    <li class="active">订单列表</li>
+                    <li class="active">商品列表</li>
                 </ol>
             </div>
         </div>
@@ -76,23 +76,29 @@
             <div class="ibox-content m-b-sm ibox-content-t border-bottom" id="ibox-content">
                   <div class="row">
                     <form  id="page_form" onkeydown="if(event.keyCode==13)return false;"
-				action="${ctxPath}/order/list" method="get">
+				action="${ctxPath}/goods/list" method="get">
 
-                    <div class="col-md-2  m-t-xs form-group">
-                        <select name="shopId" class="form-control input-s-sm inline input-sm">
-                              <option value="">门店名称</option>
-                                <% for(bean in shopList!){ %>
-									<option value="${bean.id!}" ${shopId! ==bean.id!?'selected' : ''}>${bean.name!}</option>
-								<%}%>
-                        </select>
-                    </div>
+                    <div class="form-group col-md-4 m-t-xs" id="data_5">
+                            <div class="input-daterange input-group" id="datepicker">
+                                <input type="text" class="input-sm form-control" name="start" value="${start!}">
+                                <span class="input-group-addon">至</span>
+                                <input type="text" class="input-sm form-control" name="end" value="${end}">
+                            </div>
+                      </div>
                       <div class="col-md-2  m-t-xs form-group">
-                        <select name="status" class="form-control input-s-sm inline input-sm">
-                            <option value="">－－状态－－</option>
-                            <option value="1" ${status!0==1?'selected' : ''}>未发货</option>
+                        <select name="amount" class="form-control input-s-sm inline input-sm">
+                            <option value="">－－数量－－</option>
+                            <option value="20" ${amount!0==20?'selected' : ''}>20</option>
+                            <option value="30" ${amount!0==30?'selected' : ''}>30</option>
+                            <option value="40" ${amount!0==40?'selected' : ''}>40</option>
+                            <option value="50" ${amount!0==50?'selected' : ''}>50</option>
+                            <option value="60" ${amount!0==60?'selected' : ''}>60</option>
+                            <option value="70" ${amount!0==70?'selected' : ''}>70</option>
+                            <option value="80" ${amount!0==80?'selected' : ''}>80</option>
+                            <option value="90" ${amount!0==90?'selected' : ''}>90</option>
+                            <option value="100" ${amount!0==100?'selected' : ''}>100</option>
                         </select>
                     </div>
-
                     <div class="form-group col-md-4 m-t-xs " id="data_5">
                         <div class="input-daterange input-group" >
                             <span class="input-group-btn"><i class="fa fa-search"></i> <button class="btn btn-primary btn-sm m-b-none"><i class="fa fa-search"></i> 搜索</button></span>
@@ -107,44 +113,39 @@
                         <div class="ibox-content">
                             <div class="table-responsive ">
                                 <table class="table table-centerbody table-striped table-condensed text-nowrap" id="editable-sample">
-                                <%if(error!!=null){%>
-                                 <thead>
-                                    <tr>
-                                     <td colspan="4">${error!}建议更改接入码口密码</td>
-                                    </tr>
-                                   </thead>
-                                <%}%>
                                   <thead>
                                     <tr>
                                         <th>商品ID</th>
-                                        <th>商家编码颜色尺寸</th>
-                                        <th>数量</th>
-                                        <th>图片</th>
+                                        <th>商品数量</th>
+                                        <th>商品URL</th>
+                                        <th>商品图片</th>
+                                        <th>创建时间</th>
                                     </tr>
                                     </thead>
                                     <tbody>
-                                    <%for(item in list! ){%>
-                                      <%for(goodMessage in item.list!){%>
-                                        <tr>
-                                         <%if(goodMessageLP.index==1){%>
-                                         <td rowspan="${item.list.~size}">${item.goodIds!}</td>
-                                         <%}%>
-                                        <td>${goodMessage.outerId!}_${goodMessage.goodsSpec!}</td>
-                                        <td>${goodMessage.goodsCount!}</td>
-                                        <%if(goodMessageLP.index==1){%>
-                                         <td rowspan="${item.list.~size}"><img width=${item.list.~size>3?300:100} height=${item.list.~size>3?400:100} src="${goodMessage.goodsImg!}"></td>
-                                         <%}%>
-                                          </tr>
-                                     <%}%>
-                                      <tr bordercolor="black" bgcolor="#FF0000" style="height: 1px;">
-                                      <td colspan="4" style="height: 1px;"></td>
-                                      </tr>
-                                     <tr bordercolor="black" bgcolor="#FF0000" style="height: 1px;">
-                                      <td colspan="4" style="height: 1px;"></td>
-                                      </tr>
+                                     <%for(item in page.list! ){%>
+                                    <tr>
+                                        <td>${item.goodsId!}</td>
+                                        <td>${item.amount!}</td>
+                                        <td>http://mobile.yangkeduo.com/goods.html?goods_id=${item.goodsId!}</td>
+                                        <td><img src="${item.images!}" width="50px" height="50px"></td>
+                                        <td>${item.createTime!,'yyyy-MM-dd'}</td>
+                                    </tr>
                                     <%}%>
+                                   
                                     </tbody>
                                 </table>
+                            </div>
+                               <div class="pages border-top">
+                                <div class="row">
+                                    <div class="col-md-4"><span>当前第 ${page.pageNum!}页</span>&nbsp;<span>共 ${page.pages!}页</span>&nbsp;<span class="m-t-md">共 ${page.total!} 条</span> &nbsp;<span class="m-t-md">每页 ${page.pageSize!} 条</span></div>
+                                    <div class="col-md-8 footable-visible">
+                                        <ul class="pagination pull-right">
+                                            <li class="footable-page-arrow disabled"><a data-page="prev" href="${ctxPath}/goods/list?pageNum=${page.prePage!0}&amount=${amount!}&start=${start!}&end=${end!}">上一页</a></li>
+                                            <li class="footable-page-arrow"><a data-page="next" href="${ctxPath}/goods/list?pageNum=${page.nextPage!0}&amount=${amount!}&start=${start!}&end=${end!}">下一页</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -186,7 +187,14 @@
 
 <script src="${ctxPath}/static/js/plugins/datapicker/bootstrap-datepicker.js"></script>
 <script>
-  
+$(document).ready(function() {
+		$('#data_5 .input-daterange').datepicker({
+			keyboardNavigation : false,language: 'zh_CN',
+			forceParse : false,
+			autoclose : true,
+			format : 'yyyy-mm-dd',todayBtn: "linked"
+		});  
+  });
 </script>
 </body>
 </html>
