--- a/helper/src/main/resources/views/rolemenus/admin.html
+++ b/helper/src/main/resources/views/rolemenus/admin.html
@@ -17,4 +17,10 @@
 		<span class="menu-text">订单列表</span>
 	</a>
 </li>
+<li ${active== "goods-list" ? "class='active'" : ""}>
+	<a href="${ctxPath }/goods/list"> 
+		<i class="icon-dashboard"></i>
+		<span class="menu-text">销量列表</span>
+	</a>
+</li>
 
