--- a/helper/src/main/resources/views/rolemenus/admin.html
+++ b/helper/src/main/resources/views/rolemenus/admin.html
@@ -11,10 +11,16 @@
 		<span class="menu-text">商铺列表</span>
 	</a>
 </li>
-<li ${active== "order-list" ? "class='active'" : ""}>
+<!-- <li ${active== "order-list" ? "class='active'" : ""}>
 	<a href="${ctxPath }/order/list"> 
 		<i class="icon-dashboard"></i>
 		<span class="menu-text">订单列表</span>
+	</a>
+</li> -->
+<li ${active== "order-list-json" ? "class='active'" : ""}>
+	<a href="${ctxPath}/order/list/json">
+		<i class="icon-dashboard"></i>
+		订单列表
 	</a>
 </li>
 <li ${active== "goods-list" ? "class='active'" : ""}>
