--- a/helper/src/main/resources/views/rolemenus/pdd_role.html
+++ b/helper/src/main/resources/views/rolemenus/pdd_role.html
@@ -3,8 +3,14 @@
 	href="${ctxPath }/shop/list"> <i class="icon-dashboard"></i>
 		<span class="menu-text">商铺列表</span>
 </a></li>
-<li ${active== "order-list" ? "class='active'" : ""}>
+<!-- <li ${active== "order-list" ? "class='active'" : ""}>
 	<a href="${ctxPath}/order/list">
+		<i class="icon-dashboard"></i>
+		订单列表
+	</a>
+</li> -->
+<li ${active== "order-list-json" ? "class='active'" : ""}>
+	<a href="${ctxPath}/order/list/json">
 		<i class="icon-dashboard"></i>
 		订单列表
 	</a>
