--- a/helper/src/main/resources/views/shop/add.html
+++ b/helper/src/main/resources/views/shop/add.html
@@ -97,7 +97,7 @@
 								<label class="col-sm-2 control-label"> 接入码 <span
 									class="text-danger">*</span></label>
 								<div class="col-sm-10">
-									<input type="text" id="key" name="key" value="${shop.key!}"
+									<input type="text" id="ownerId" name="ownerId" value="${shop.ownerId!}"
 										placeholder="请输入接入码" class="form-control" required>
 								</div>
 							</div>
@@ -171,7 +171,7 @@
 						minlength : 3,
 						maxlength : 20
 					},
-					"key" : {
+					"ownerId" : {
 						required : true,
 						minlength : 2,
 						maxlength : 11,
@@ -195,7 +195,7 @@
 						minlength : "最小长度为3",
 						maxlength : "最大长度为20"
 					},
-					"key" : {
+					"ownerId" : {
 						required : "请输入key",
 						minlength : "最小长度2",
 						maxlength : "最大长度11",
