--- a/helper/src/main/resources/views/shop/add.html
+++ b/helper/src/main/resources/views/shop/add.html
@@ -70,10 +70,10 @@
 			<!--------当前位置----->
 			<div class="row  border-bottom white-bg page-heading">
 				<div class="col-sm-4">
-					<h2>门店${shop!!=null?'编辑':'新增'}</h2>
+					<h2>商铺${shop!!=null?'编辑':'新增'}</h2>
 					<ol class="breadcrumb">
 						<li><a href="${ctxPath}/">管理首页</a></li>
-						<li class="active">门店${shop!!=null?'编辑':'新增'}</li>
+						<li class="active">商铺${shop!!=null?'编辑':'新增'}</li>
 					</ol>
 				</div>
 			</div>
@@ -85,36 +85,36 @@
 						<form name="entity" id="input_form" class="form-horizontal">
 							<input type="hidden" id="id" name="id" value="${shop.id!}">
 							<div class="form-group">
-								<label class="col-sm-2 control-label">门店名称 <span
+								<label class="col-sm-2 control-label">商铺名称 <span
 									class="text-danger">*</span></label>
 								<div class="col-sm-10">
 									<input type="text" id="name" name="name" value="${shop.name!}"
-										placeholder="请输入门店名称" class="form-control" required>
+										placeholder="请输入商铺名称" class="form-control" required>
 								</div>
 							</div>
 
 							<div class="form-group">
-								<label class="col-sm-2 control-label"> 接入码 <span
+								<label class="col-sm-2 control-label"> 商铺ID <span
 									class="text-danger">*</span></label>
 								<div class="col-sm-10">
 									<input type="text" id="ownerId" name="ownerId" value="${shop.ownerId!}"
-										placeholder="请输入接入码" class="form-control" required>
+										placeholder="请输入商铺ID" class="form-control" required>
 								</div>
 							</div>
-							<div class="form-group">
+							<!-- <div class="form-group">
 								<label class="col-sm-2 control-label">接口密码 <span
 									class="text-danger">*</span></label>
 								<div class="col-sm-10">
 									<input type="text" id="secret" name="secret" value="${shop.secret!}"
 										placeholder="请输入接口密码" class="form-control" required>
 								</div>
-							</div>
+							</div> -->
 							<div class="form-group">
 								<label class="col-sm-2 control-label"> 手机号 <span
 									class="text-danger">*</span></label>
 								<div class="col-sm-10">
 									<input type="text" id="phone" name="phone" value="${shop.phone!}"
-										placeholder="请输入门店联系人" class="form-control" required>
+										placeholder="请输入商铺联系人" class="form-control" required>
 								</div>
 							</div>
 
@@ -191,20 +191,15 @@
 				},
 				messages : {
 					"name" : {
-						required : "请输入门店名称",
+						required : "请输入商铺名称",
 						minlength : "最小长度为3",
 						maxlength : "最大长度为20"
 					},
 					"ownerId" : {
-						required : "请输入key",
+						required : "请输入商铺ID",
 						minlength : "最小长度2",
 						maxlength : "最大长度11",
 						digits : "请输入正整数"
-					},
-					"secret" : {
-						required : "请输入手机号",
-						minlength : "最小长度11",
-						maxlength : "最大长度60"
 					},
 					phone : {
 						required : "请输入手机号",
