--- a/helper/src/main/resources/views/express/edit.html
+++ b/helper/src/main/resources/views/express/edit.html
@@ -146,7 +146,27 @@
 								   </textarea>
 								</div>
 							</div>
-
+	                  <div class="form-group">
+								<label class="col-sm-2 control-label"> 回寄快递公司 <span
+									class="text-danger">*</span></label>
+								<div class="col-sm-10">
+									<select name="backExpress" id="backExpress"  class="chosen-select" tabindex="2">
+							<option value="">请选择</option>
+							<%for(expressEnum in mapExpressEnums!){%>
+							<option value="${expressEnum.key!}"
+								${expressEnum.key==backExpress!'yunda'?'selected':''}>${expressEnum.value!}</option>
+							<%}%>
+						</select>
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-sm-2 control-label">回寄快递单号 <span
+									class="text-danger">*</span></label>
+								<div class="col-sm-10">
+									<input type="text" id="backOrder" name="backOrder" value="${entiry.backOrder!}"
+										placeholder="请输入快递单号" class="form-control" required>
+								</div>
+							</div>
 
 							<div class="hr-line-dashed"></div>
 							<div class="form-group">
@@ -206,6 +226,10 @@
 					},
 					"action" : {
 						required : true
+					},"backExpress":{
+						required : true
+					},"backOrder":{
+						required : true
 					}
 				},
 				messages : {
@@ -220,6 +244,10 @@
 					},
 					"action" : {
 						required : "请选择退换"
+					},"backExpress":{
+						required : "请选择快递公司"
+					},"backOrder":{
+						required : "请输入快递单号"
 					}
 
 				},
